--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,16 @@ cache: pip
 addons:
   apt:
     packages:
-      - expect-dev  # provides unbuffer utility
-      - python-lxml  # because pip installation is slow
+      - expect-dev
+      - python-lxml
 
 env:
   global:
   - VERSION="10.0" TESTS="0" LINT_CHECK="0" TRANSIFEX="0"
-  - TRANSIFEX_USER='transbot@odoo-community.org'
-  - secure: GzvUeJ2NRqb1+zQFgBcWmKqa9i3GtwD0XJP05UTGVYIBQ1oCuieB20LF8YhbXE/yI5fbbsc6AEfp3BJ579eD1vkcPFT2jyKawbVEi9NIaoKt/0KBhJJMjcLWqdCookEjdZvzRjOPbQav2o45guVZQNuxVuyIuR2gBJb8kIQ24VM=
 
   matrix:
   - LINT_CHECK="1"
-  - TRANSIFEX="1"
   - TESTS="1" ODOO_REPO="odoo/odoo"
-  - TESTS="1" ODOO_REPO="OCA/OCB"
 
 virtualenv:
   system_site_packages: true
