--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ before_install:
  - "phantomjs --version"
 
 install:
+  - pip install cachetools, pdfconv
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
