--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ before_install:
  - "phantomjs --version"
 
 install:
-  - pip install cachetools, pdfconv
+  - pip install cachetools
+  - pip install pdfconv
   - git clone https://github.com/OCA/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
   - export PATH=${HOME}/maintainer-quality-tools/travis:${PATH}
   - travis_install_nightly
